--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "tsc-main": "tsc -p tsconfig.main.json --watch --preserveWatchOutput",
     "tsc-renderer": "esbuild src/js/index.ts --bundle --outfile=dist/js/index.js --format=cjs --platform=browser --external:electron --watch",
     "start": "electron .",
-    "dist": "npm run build && electron-builder --win"
+    "dist": "npm run build && electron-builder --win",
+    "build:mac": "npm run build && electron-builder --mac",
+    "build:win": "npm run build && electron-builder --win",
+    "build:linux": "npm run build && electron-builder --linux"
   },
   "icon": "./app.ico",
   "repository": {
@@ -38,6 +41,14 @@
     "win": {
       "target": "nsis",
       "icon": "./app.ico"
+    },
+    "mac": {
+      "target": "dmg",
+      "icon": "./app.png"
+    },
+    "linux": {
+      "target": "AppImage",
+      "icon": "./app.png"
     },
     "files": [
       "dist/**/*",
