--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,9 +59,7 @@ jobs:
         run: npm ci
 
       - name: Import Code-Signing Certificates (macOS)
-        if: matrix.platform == 'macos-latest' && env.APPLE_CERTIFICATE != ''
-        env:
-          APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
+        if: matrix.platform == 'macos-latest'
         uses: apple-actions/import-codesign-certs@v3
         with:
           p12-file-base64: ${{ secrets.APPLE_CERTIFICATE }}
