--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,7 +63,7 @@ jobs:
         uses: apple-actions/import-codesign-certs@v3
         with:
           p12-file-base64: ${{ secrets.APPLE_CERTIFICATE }}
-          p12-password: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
+          p12-password: "${{ secrets.APPLE_CERTIFICATE_PASSWORD }}"
 
       - name: Install Linux dependencies
         if: matrix.platform == 'ubuntu-22.04'
