--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -9,7 +9,8 @@ extraMetadata:
   main: ./dist/main.js
 
 files:
-  - dist/**/*
+  - dist/main.js
+  - dist/js/**/*
   - src/view/**/*
   - src/css/**/*
   - package.json
@@ -46,11 +47,9 @@ mac:
     - target: dmg
       arch:
         - arm64
-        - x64
     - target: zip
       arch:
         - arm64
-        - x64
   gatekeeperAssess: false
   entitlements: ./assets/entitlements.mac.plist
   entitlementsInherit: ./assets/entitlements.mac.plist
