--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -25,6 +25,8 @@ compression: maximum
 asar: true
 artifactName: ${productName}-${version}-${os}-${arch}.${ext}
 
+afterPack: scripts/afterPack.js
+
 win:
   target:
     - target: nsis
