--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "tsc-renderer": "esbuild src/ts/index.ts --bundle --outfile=dist/js/index.js --format=cjs --platform=browser --external:electron --watch",
     "start": "electron .",
     "dist": "npm run build && electron-builder --win",
-    "build:mac": "npm run build && electron-builder --mac",
-    "build:win": "npm run build && electron-builder --win",
-    "build:linux": "npm run build && electron-builder --linux"
+    "build:mac": "npm run build && electron-builder --mac --publish never",
+    "build:win": "npm run build && electron-builder --win --publish never",
+    "build:linux": "npm run build && electron-builder --linux --publish never"
   },
   "icon": "./app.ico",
   "repository": {
